# SecretData_v1

./: .gitignore  Dockerfile  README.md  docker-compose.yml  first_try.txt  pyproject.toml  run.txt
app/: database.py  encryption.py  main.py  models.py  redis_client.py  schemas.py
app/routes/: secrets.py
