[tool.poetry]
name = "SecretsData_app"
version = "0.1.0"
description = "A FastAPI application with PostgreSQL and Redis"
authors = ["https://github.com/MikaTarro"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^1.4.27"
psycopg2-binary = "^2.9.10"
redis = "^4.0.2"
cryptography = "^3.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
